tests/baselines/reference/YieldExpression13_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression13_es6.ts(1,9): error TS9001: Generators are not currently supported.
tests/cases/conformance/es6/yieldExpressions/YieldExpression13_es6.ts(1,19): error TS9000: 'yield' expressions are not currently supported.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression13_es6.ts (2 errors) ====
    function* foo() { yield }
            ~
!!! error TS9001: Generators are not currently supported.
                      ~~~~~
!!! error TS9000: 'yield' expressions are not currently supported.